...
                    )
                }
            } else {
                IconButton(
                    onClick = actions.openDrawer,
                    modifier = Modifier
                        .testTag("clender_open_navigation_drawer")
                        .sizeIn(minWidth = 48.dp, minHeight = 48.dp)
                ) {
                    Icon(
                        imageVector = Icons.Filled.Menu,
                        contentDescription = stringResource(
                            R.string.semantics_open_navigation_drawer
...
